ch12: reviewed important aspects of the modules chapter